# rsfilter

./: Cargo.toml  README.md  build.rs
.github/workflows/: draft.yml  main.yml  rust-quality.yml
proto/: js-filter.proto
src/: init-quick-js-bench.rs  main.rs  rs-filter-boa.rs  rs-filter-quick.rs  simple-client-quick.rs  simple-client.rs
