[package]
name = "js-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server-boa"
path = "src/rs-filter-boa.rs"

[[bin]]
name = "server-quick"
path = "src/rs-filter-quick.rs"


[[bin]]
name = "simple-client"
path = "src/simple-client.rs"

[[bin]]
name = "simple-client-quick"
path = "src/simple-client.rs"


[dependencies]
log = "0.4"
simple_logger = "2.3.0"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
boa_engine = "0.16.0"
hirofa_utils = "0.5"
quickjs_runtime = "0.8"

[build-dependencies]
tonic-build = "0.8"
