[package]
name = "js-filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server-boa"
path = "src/rs-filter-boa.rs"

[[bin]]
name = "server-quick"
path = "src/rs-filter-quick.rs"


[[bin]]
name = "simple-client"
path = "src/simple-client.rs"

[[bin]]
name = "simple-client-quick"
path = "src/simple-client.rs"

[[bin]]
name = "init-quick-js-bench"
path = "src/init-quick-js-bench.rs"


[dependencies]
boa_engine = "0.16.0"
config = "0.13.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hirofa_utils = "0.5"
log = "0.4"
num_cpus = "1.0"
prost = "0.11"
quickjs_runtime = "0.8"
rand = "0.8.5"
simple_logger = "4.0.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"


[build-dependencies]
tonic-build = "0.8"
